<resources>
    <string name="app_name">Labyrinth</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="about">About</string>
    <string name="about_translators">Translators</string>

    <string name="about_app_promise" id="21">App Promise</string>
    <string name="about_no_trackers" id="22">No trackers</string>
    <string name="about_complete_privacy" id="23">Complete privacy</string>
    <string name="about_offline_app" id="24">Offline app</string>
    <string name="about_free_and_open_source" id="25">Free and Open Source</string>
    <string name="about_info" id="26">App Info</string>
    <string name="about_info_paragraph" id="27">WHATS THE CHARGE??. EATING A MEAL!! EATING A SUCCULANT CHINESE MEAL!!??</string>
    <string name="about_contributors" id="28">Contributors</string>
    <string name="about_fennec" id="UNTRANSLATE" translatable="false">"@Fennec_exe"</string>
    <string name="about_jack" id="UNTRANSLATE" translatable="false">"@jack.txt"</string>
    <string name="about_izzysoft" id="UNTRANSLATE" translatable="false">"@IzzySoft"</string>
    <string name="about_licaon" id="UNTRANSLATE" translatable="false">"@licaon-kter"</string>
    <string name="about_poussinou" id="UNTRANSLATE" translatable="false">"@Poussinou"</string>
    <string name="about_acknowledgements" id="29">Acknowledgements</string>
    <string name="about_attribution" id="30">Launcher icon - Freepik via Flaticon</string>
    <string name="tick" id="31">Tick</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">settingsAct</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync with GitLab</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="about_no_ads" id="91">No ads</string>

    <!-- project.FileViewer & project.FolderViewer -->
    <string name="project_fv_error">Something went wrong</string>
    <string name="project_fv_error_retry">Retry</string>

    <!-- Home (Work) page -->
    <string name="home_top_title">Your Work</string>
    <string name="home_bottom_title">Pins</string>
    <string name="home_bottom_add_desc">Pin a new item</string>

    <string name="avatar">Avatar</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="no_description">Description</string>

    <string name="access_0">No access</string>
    <string name="access_5">Minimal access</string>
    <string name="access_10">Guest</string>
    <string name="access_20">Reporter</string>
    <string name="access_30">Developer</string>
    <string name="access_40">Maintainer</string>
    <string name="access_50">Owner</string>
    <string name="members">Members</string>
    <string name="group">Group</string>
    <string name="your_work">Your Work</string>
    <string name="project">Project</string>
    <string name="path">Path</string>
    <string name="_0">0</string>
    <string name="latest_commit">Latest Commit</string>
    <string name="title">Title</string>
    <string name="short_id">Short id</string>
    <string name="pipeline">Pipeline</string>
    <string name="stars_awarded">Stars Awarded</string>
    <string name="forked_projects">Forks created</string>
    <string name="latest_tag">Latest tag</string>
    <string name="repository_size">Repository size</string>
    <string name="commit_ammount">Commits made</string>
    <string name="official_repo">Official repository of this app</string>
    <string name="home">Home</string>
    <string name="projects">Projects</string>
    <string name="groups">Groups</string>
    <string name="issues">Issues</string>
    <string name="explore_title">Explore projects related to %1$s</string>
</resources>