<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/title"
                style="@style/toolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresher"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/toolbar_line">

                        <ImageView
                            android:id="@+id/project_avatar"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:contentDescription="@string/avatar"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@mipmap/ic_launcher_round" />

                        <TextView
                            android:id="@+id/project_name"
                            style="@style/title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/name"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/project_avatar"
                            app:layout_constraintTop_toTopOf="@+id/project_avatar" />

                        <TextView
                            android:id="@+id/project_path"
                            style="@style/secondary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/path"
                            app:layout_constraintEnd_toEndOf="@+id/project_name"
                            app:layout_constraintStart_toStartOf="@+id/project_name"
                            app:layout_constraintTop_toBottomOf="@+id/project_name" />

                        <TextView
                            android:id="@+id/project_description"
                            style="@style/secondary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/no_description"
                            android:textColor="?android:attr/textColorPrimary"
                            app:layout_constraintEnd_toEndOf="@+id/project_path"
                            app:layout_constraintStart_toStartOf="@+id/project_avatar"
                            app:layout_constraintTop_toBottomOf="@+id/project_avatar" />

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/project_chips"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="20dp"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/project_description" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/toolbar_line"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView
                            android:id="@+id/commit_user_title"
                            style="@style/secondary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/latest_commit"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/commit_avatar"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:contentDescription="@string/avatar"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/commit_user_title"
                            app:srcCompat="@mipmap/ic_launcher_round" />

                        <TextView
                            android:id="@+id/commit_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/title"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toStartOf="@+id/commit_pipeline"
                            app:layout_constraintStart_toEndOf="@+id/commit_avatar"
                            app:layout_constraintTop_toTopOf="@+id/commit_avatar" />

                        <TextView
                            android:id="@+id/commit_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:paddingBottom="20dp"
                            android:text="@string/short_id"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="@+id/commit_title"
                            app:layout_constraintStart_toStartOf="@+id/commit_title"
                            app:layout_constraintTop_toBottomOf="@+id/commit_title" />

                        <ImageView
                            android:id="@+id/commit_pipeline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:contentDescription="@string/pipeline"
                            app:layout_constraintBottom_toBottomOf="@+id/commit_id"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/commit_user_title" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </ScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/spinner"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>